force-app/main/default/objects/CC_Application_Specification__c/CC_Application_Specification__c.object-meta.xml
<CustomObject>
    <label>Application Specification</label>
    <nameField>
        <displayFormat>APS-{00000}</displayFormat>
        <label>Application Specification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>