force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Account__c.field-meta.xml
<CustomField>
    <fullName>CC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Specifications (Account)</relationshipLabel>
    <relationshipName>Application_Specifications1</relationshipName>
    <type>Lookup</type>
</CustomField>