force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Additional_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>CC_Additional_Information_Required__c</fullName>
    <label>Additional Information Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>