force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Additional_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Additional_Information_Status__c</fullName>
    <label>Additional Information Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>