force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <description>To store the data for the person if he have lived out of state during the last 5 years</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>