force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Application_Contact__c.field-meta.xml
<CustomField>
    <fullName>CC_Application_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Contact</label>
    <referenceTo>CC_Application_Contact__c</referenceTo>
    <relationshipLabel>Application Specifications</relationshipLabel>
    <relationshipName>Application_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>