force-app/main/default/objects/CC_Application_Specification__c/fields/CC_BusinessLicenseApplication__c.field-meta.xml
<CustomField>
    <fullName>CC_BusinessLicenseApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>Application_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>