force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CC_Capacity__c</fullName>
    <formula>IF(
    ISPICKVAL( CC_Space_Type__c , &apos;Indoor Space&apos;), 
      ROUND(CC_SqaureFeet__c /   VALUE( $Label.CC_IndoorSpace) , 0), 
 IF (ISPICKVAL( CC_Space_Type__c , &apos;Outdoor Space&apos;), 
     ROUND(CC_SqaureFeet__c/ VALUE($Label.CC_OutdoorSpaceRequired) , 0), 0
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>