force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Capacity_of_Room__c.field-meta.xml
<CustomField>
    <fullName>CC_Capacity_of_Room__c</fullName>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>