force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Care_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Care_Type__c</fullName>
    <label>Care Type(Parent)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Half Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>