force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Charges_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Charges_Date__c</fullName>
    <label>Charges Date</label>
    <type>Date</type>
</CustomField>