force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Charges_State__c.field-meta.xml
<CustomField>
    <fullName>CC_Charges_State__c</fullName>
    <label>Charges State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>