force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Circumstances__c.field-meta.xml
<CustomField>
    <fullName>CC_Circumstances__c</fullName>
    <label>Circumstances</label>
    <type>TextArea</type>
</CustomField>