force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Contact_Number__c</fullName>
    <label>Contact Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>