force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Contact_Role_Relationship__c.field-meta.xml
<CustomField>
    <fullName>CC_Contact_Role_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Role/Relationship</label>
    <referenceTo>CC_Contact_Role_Relationship__c</referenceTo>
    <relationshipLabel>Application Specifications</relationshipLabel>
    <relationshipName>Application_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>