force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Conviction_and_Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Conviction_and_Disposition_Date__c</fullName>
    <label>Conviction and Disposition Date</label>
    <type>Date</type>
</CustomField>