force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Date_From__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_From__c</fullName>
    <description>Date of residence for the Past Five Years</description>
    <label>Date Of Residency From</label>
    <type>Date</type>
</CustomField>