force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Day__c.field-meta.xml
<CustomField>
    <fullName>CC_Day__c</fullName>
    <label>Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mon</fullName>
            </value>
            <value>
                <fullName>Tue</fullName>
            </value>
            <value>
                <fullName>Wed</fullName>
            </value>
            <value>
                <fullName>Thu</fullName>
            </value>
            <value>
                <fullName>Fri</fullName>
            </value>
            <value>
                <fullName>Sat</fullName>
            </value>
            <value>
                <fullName>Sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>