force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Daytime_Evening_Weekend__c.field-meta.xml
<CustomField>
    <fullName>CC_Daytime_Evening_Weekend__c</fullName>
    <label>Daytime / Evening-Weekend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daytime</fullName>
            </value>
            <value>
                <fullName>Evening-Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>