force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Default_Name_Check__c.field-meta.xml
<CustomField>
    <fullName>CC_Default_Name_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Name Check</label>
    <type>Checkbox</type>
</CustomField>