force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Degree__c.field-meta.xml
<CustomField>
    <fullName>CC_Degree__c</fullName>
    <label>Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>