force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Description__c</fullName>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>