force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Document_Revision__c.field-meta.xml
<CustomField>
    <fullName>CC_Document_Revision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Revision</label>
    <type>Checkbox</type>
</CustomField>