force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>