force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Employer__c.field-meta.xml
<CustomField>
    <fullName>CC_Employer__c</fullName>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>