force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Employer_Apt_Suite__c.field-meta.xml
<CustomField>
    <fullName>CC_Employer_Apt_Suite__c</fullName>
    <label>Employer Apt Suite</label>
    <length>10</length>
    <type>Text</type>
</CustomField>