force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Employer_County__c.field-meta.xml
<CustomField>
    <fullName>CC_Employer_County__c</fullName>
    <label>Employer County</label>
    <length>20</length>
    <type>Text</type>
</CustomField>