force-app/main/default/objects/CC_Application_Specification__c/fields/CC_End_Time__c.field-meta.xml
<CustomField>
    <fullName>CC_End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>