force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>