force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Explain_Why_You_Need_Care__c.field-meta.xml
<CustomField>
    <fullName>CC_Explain_Why_You_Need_Care__c</fullName>
    <label>Explain why you need care</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>