force-app/main/default/objects/CC_Application_Specification__c/fields/CC_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>CC_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>CC Existing Record Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>