force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Fields_Req_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>CC_Fields_Req_Additional_Information__c</fullName>
    <label>Fields Requiring Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>