force-app/main/default/objects/CC_Application_Specification__c/fields/CC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_First_Name__c</fullName>
    <description>Field to store first name</description>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>