force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Floor_Level__c.field-meta.xml
<CustomField>
    <fullName>CC_Floor_Level__c</fullName>
    <label>Floor Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GROUND FLOOR</fullName>
            </value>
            <value>
                <fullName>1ST FLOOR</fullName>
            </value>
            <value>
                <fullName>2ND FLOOR</fullName>
            </value>
            <value>
                <fullName>3RD FLOOR</fullName>
            </value>
            <value>
                <fullName>4TH FLOOR</fullName>
            </value>
            <value>
                <fullName>5TH FLOOR</fullName>
            </value>
            <value>
                <fullName>6TH FLOOR</fullName>
            </value>
            <value>
                <fullName>LOWER LEVEL</fullName>
            </value>
            <value>
                <fullName>UPPER LEVEL</fullName>
            </value>
            <value>
                <fullName>BASEMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>