force-app/main/default/objects/CC_Application_Specification__c/fields/CC_From_Friday__c.field-meta.xml
<CustomField>
    <fullName>CC_From_Friday__c</fullName>
    <label>From(Friday)</label>
    <type>Time</type>
</CustomField>