force-app/main/default/objects/CC_Application_Specification__c/fields/CC_From_Sunday__c.field-meta.xml
<CustomField>
    <fullName>CC_From_Sunday__c</fullName>
    <label>From(Sunday)</label>
    <type>Time</type>
</CustomField>