force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>CC_Individual_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Application Specifications</relationshipLabel>
    <relationshipName>Application_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>