force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>