force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Issuance_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Issuance_Date__c</fullName>
    <label>Issuance Date</label>
    <type>Date</type>
</CustomField>