force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Issuance_State__c.field-meta.xml
<CustomField>
    <fullName>CC_Issuance_State__c</fullName>
    <label>Issuance State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>