force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Issuer_Organisation__c.field-meta.xml
<CustomField>
    <fullName>CC_Issuer_Organisation__c</fullName>
    <label>Issuer Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>