force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Jurisdiction_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Jurisdiction_Date__c</fullName>
    <label>Jurisdiction Date</label>
    <type>Date</type>
</CustomField>