force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_Name__c</fullName>
    <description>Field to store last name</description>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>