force-app/main/default/objects/CC_Application_Specification__c/fields/CC_License_Never_Expires__c.field-meta.xml
<CustomField>
    <fullName>CC_License_Never_Expires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Never Expires</label>
    <type>Checkbox</type>
</CustomField>