force-app/main/default/objects/CC_Application_Specification__c/fields/CC_License_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_License_Number__c</fullName>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>