force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Location_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>CC_Location_Jurisdiction__c</fullName>
    <label>Location/Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>