force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Mailing_Address_same__c.field-meta.xml
<CustomField>
    <fullName>CC_Mailing_Address_same__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Address same</label>
    <type>Checkbox</type>
</CustomField>