force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Mailing_Apt_Suite__c.field-meta.xml
<CustomField>
    <fullName>CC_Mailing_Apt_Suite__c</fullName>
    <label>Mailing Apt/Suite</label>
    <length>20</length>
    <type>Text</type>
</CustomField>