force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>CC_Mailing_County__c</fullName>
    <label>Mailing County</label>
    <length>20</length>
    <type>Text</type>
</CustomField>