force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Major__c.field-meta.xml
<CustomField>
    <fullName>CC_Major__c</fullName>
    <label>CC Major</label>
    <length>40</length>
    <type>Text</type>
</CustomField>