force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Mark_Deleted__c.field-meta.xml
<CustomField>
    <fullName>CC_Mark_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark Deleted</label>
    <type>Checkbox</type>
</CustomField>