force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>