force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Name_of_Area__c.field-meta.xml
<CustomField>
    <fullName>CC_Name_of_Area__c</fullName>
    <label>Name of Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>