force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Nature_of_Conviction_and_Disposition__c.field-meta.xml
<CustomField>
    <fullName>CC_Nature_of_Conviction_and_Disposition__c</fullName>
    <label>Nature of the Conviction and Disposition</label>
    <type>TextArea</type>
</CustomField>