force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Other_State_Certificate__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_State_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other State Certificate</label>
    <type>Checkbox</type>
</CustomField>