force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>CC_Outcomes__c</fullName>
    <label>Outcomes</label>
    <type>TextArea</type>
</CustomField>