force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Owner_Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>CC_Owner_Co_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner/Co-owner</label>
    <type>Checkbox</type>
</CustomField>