force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Phone__c.field-meta.xml
<CustomField>
    <fullName>CC_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>