force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Place_of_Conviction_and_Disposition__c.field-meta.xml
<CustomField>
    <fullName>CC_Place_of_Conviction_and_Disposition__c</fullName>
    <label>Place of Conviction and Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>