force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Position__c.field-meta.xml
<CustomField>
    <fullName>CC_Position__c</fullName>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>