force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Provider__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Specifications</relationshipLabel>
    <relationshipName>Application_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>