force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Provider_Below_Market_Rate_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_Below_Market_Rate_Status__c</fullName>
    <label>Provider Below Market Rate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>