force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Reservation__c.field-meta.xml
<CustomField>
    <fullName>CC_Reservation__c</fullName>
    <label>Reservation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>