force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Role_Type__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator/Director</fullName>
            </value>
            <value>
                <fullName>Administrative Staff</fullName>
            </value>
            <value>
                <fullName>Assistant Director</fullName>
            </value>
            <value>
                <fullName>Early Head Start Assistant Teacher</fullName>
            </value>
            <value>
                <fullName>Early Head Start Teacher</fullName>
            </value>
            <value>
                <fullName>Education Coordinator</fullName>
            </value>
            <value>
                <fullName>Elementary Teacher</fullName>
            </value>
            <value>
                <fullName>Family Child Care Assistant</fullName>
            </value>
            <value>
                <fullName>Family Child Care Emergency Assistant</fullName>
            </value>
            <value>
                <fullName>Family Child Care Provider</fullName>
            </value>
            <value>
                <fullName>Floater/Support Staff</fullName>
            </value>
            <value>
                <fullName>Head Start Assistant Teacher</fullName>
            </value>
            <value>
                <fullName>Head Start Teacher</fullName>
            </value>
            <value>
                <fullName>Higher Education Faculty/Staff</fullName>
            </value>
            <value>
                <fullName>Infant Assistant Teacher</fullName>
            </value>
            <value>
                <fullName>Infant Teacher</fullName>
            </value>
            <value>
                <fullName>Janitorial/Housekeeping</fullName>
            </value>
            <value>
                <fullName>Kindergarten Teacher</fullName>
            </value>
            <value>
                <fullName>Kitchen/Cooking Staff</fullName>
            </value>
            <value>
                <fullName>License-Exempt Provider</fullName>
            </value>
            <value>
                <fullName>Mental health Consultant/Specialist</fullName>
            </value>
            <value>
                <fullName>Night Time Coordinator</fullName>
            </value>
            <value>
                <fullName>Non-Teaching Leadership</fullName>
            </value>
            <value>
                <fullName>Nurse/Health Care Consultant/Specialist</fullName>
            </value>
            <value>
                <fullName>Other, Describe</fullName>
            </value>
            <value>
                <fullName>Owner/Executive Lead</fullName>
            </value>
            <value>
                <fullName>Preschool Assistant Teacher</fullName>
            </value>
            <value>
                <fullName>Preschool Teacher</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Professional Development/Technical Assistance Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>