force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Room_Name__c</fullName>
    <label>Room Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>