force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Room_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Room_Number__c</fullName>
    <label>Room Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>