force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Room_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Room_Status__c</fullName>
    <label>Room Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Use</fullName>
            </value>
            <value>
                <fullName>Not in use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>