force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Room_Use__c.field-meta.xml
<CustomField>
    <fullName>CC_Room_Use__c</fullName>
    <label>Room Use</label>
    <length>20</length>
    <type>Text</type>
</CustomField>