force-app/main/default/objects/CC_Application_Specification__c/fields/CC_School_Age_Part_Time_Rate__c.field-meta.xml
<CustomField>
    <fullName>CC_School_Age_Part_Time_Rate__c</fullName>
    <label>School Age Part Time Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>