force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Space_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Space_Type__c</fullName>
    <inlineHelpText>Type of Space</inlineHelpText>
    <label>Space Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor Space</fullName>
            </value>
            <value>
                <fullName>Outdoor Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>